@@ -1,4 +1,5 @@
 * Wed May 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
+- Added aide::aliases entries for DISA STIG
 - Replaced OBE simp::yum::enable_auto_updates entries with
   simp::yum::schedule::enable in all profiles
 - Added and updated simp::yum::schedules entries for DISA STIG
